edit css part of home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,19 +18,25 @@
         <button id="button1" align="center">search</button>
       </div>
     </div>
-    <div class="second">
-gith      <p id="description"> <span>1</span>   Search the job by keywords (ex : python, php, javascript)
+    <div class="second"> only  <span> 3</span>    steps
+      <p id="description"> <span>1</span>   Search the job by keywords (ex : python, php, javascript)
       <br/><br/><span>2</span>   Wait until scrapping done.
       <br/><br/><span>3</span>   Check remote jobs and download .csv file to keep search data.</p>
     </div>
     <div class="third">
-      <h2 id="statement"> Work Remotely </h2>
-      <h3> Spend more time with your family </h3>
+      <div id = "third_textbox">
+         <h2 id="third_text_1">
+           <img src="light_bulb.png" alt="light_bulb" id="light_bulb" style="width:4.2vw;height:4.2vw;"> <br>
+          &quot;Work Remotely, <br/>
+          Enjoy Your Life More&quot;
+          </h2>
+     </div>
     </div>
     <div class="end">
-      <h2> Job information is scrapped from </br> weworkremotely, remoteok and stackoverflow</h2>
-      <h3> This project is not made for commercial purpose. </h3>
-      <h4> design inspired by LinkedIn </h4>
+      <h2 > Job information is scrapped from <br> <a href="https://weworkremotely.com/">weworkremotely</a>, <a href="https://remoteok.io/">remoteok</a> and <a href="https://stackoverflow.com/jobs">stackoverflow</a></h2>
+      <h3> This project is not made for commercial purpose. </h3> <br>
+      <h4> design inspired by LinkedIn <br/>
+           copyright © Claire Yoon (<a href="https://github.com/honeydoyaji">github</a>) </h4>
     </end>
   </main>
 </body>
