--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,7 @@ main {
   display : block;
 }
 .top {
-  height : 550px;
+  height : 600px;
   background-color : #0E76A8;
   padding : 20px;
 }
@@ -61,10 +61,10 @@ button {
   height : 22px;
 }
 .second {
-  font-size : 18px;
-  height : 400px;
+  font-size : 35px;
+  height : 440px;
   text-align : center;
-  padding-top : 80px;
+  padding-top : 140px;
 }
 span {
   color : white;
@@ -79,40 +79,54 @@ span {
 }
 .third {
   background-image: url("bg_cat_computer.jpg");
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  min-width : 750px;
+  min-height : 500px;
   height : 500px;
+  position : relative;
 }
-#statement {
-  font : 30px;
-  display: inline-flex;
-  font-weight : Bold;
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid black; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .20em; /* Adjust as needed */
-  animation:
-    typing 5s steps(30, end),
-    blink-caret .8s step-end infinite;
+#third_textbox {
+    position : absolute;
+    background-color: rgba(255,255,255, 0.6);
+    left : 0;
+    bottom : 0;
+    width : 50%;
+    height : 100%;
+    text-align : center;
 }
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+#third_text_1 {
+  font : 3vw black;
+  font-weight: bolder;
+  position : relative;
+  top: 48%;
+  transform: translateY(-50%);
 }
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  20% { border-color: black; }
+#light_bulb {
+  animation: neon 3s infinite;
+  filter: drop-shadow(1px 1px 5px #FFFF00);
+}
+@keyframes neon {
+  0% {opacity: 0.7;}
+  75% {opacity: 1;}
+  80% {opacity: 0.5;}
+  85% {opacity: 0.8;}
+  90% {opacity: 0.5;}
+  95% {opacity: 0.8;}
+  100% {opacity: 1;}
 }
 .end {
   font-size : 17px;
-  height : 180px;
+  height : 250px;
   text-align : center;
-  padding : 60px;
-  margin-top : 40px;
+  padding : 50px;
+  margin-top : 50px;
 }
 h4 {
   font-size : 10px;
+}
+a {
+  color : black;
+  text-decoration: underline;
+  text-decoration-thickness: 5%;
 }
