--- a/templates/report.html
+++ b/templates/report.html
@@ -3,31 +3,28 @@
 
 <head style="text-align:center">
   <title> Remote Jobs : {{searchingBy}} </title>
-  <link href="https://andybrewer.github.io/mvp/mvp.css" rel="stylesheet"></link>
-  <style> 
-    body {
-      background-image: linear-gradient(to bottom, #cfd9df, #d4dde2, #d9e1e4, #dfe4e7, #e4e8ea, #e8ebed, #ecedf0, #f0f0f2, #f4f3f4, #f7f5f7, #faf8f9, #fdfbfb);
-    }
-  </style>
+  <link href="../static/css/common.css" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <h1> Remote Job List </h1>
-    <h3> {{resultNumber}} {{searchingBy}} related jobs found </h3>
-    <a href="/export?word={{searchingBy}}">Export to CSV</a>
-    <h5> <a href="/">← Go back </a> </h5>
+    <h1> Search : {{searchingBy}} </h1>
+    <h3> <span id> {{resultNumber}} </span> jobs found </h3>
+    <a class="btn btn_csv" href="/export?word={{searchingBy}}">Export to CSV</a>
+    <a class="btn btn_back" href="/">Go back</a>
   </header>
-  <main>
+  <section>
+    <div class="table">
+      <h4> Title </h4>
+      <h4> Company </h4>
+      <h4> Link </h4>
     {% for job in jobs %}
-      <div>
-        <h3>{{job["title"]}}</h3>
-        <h4>{{job["company"]}}</h4> <br>
-        <a href="{{job["apply_link"]}}" target="_blank"> Apply</a>
-      </div>
-      <hr />
-    {% endfor %} 
-  </main>
+        <span>{{job["title"]}}</span>
+        <span>{{job["company"]}}</span>
+        <a href="{{job["apply_link"]}}" target="_blank" class="btn btn_apply"> Apply</a>
+    {% endfor %}
+    </div>
+  </section>
 </body>
 
 </html>
