--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,7 @@
           <h3 align="center"> Search by term:</h3>
           <input id="input1" placeholder='   ex: python' required name="word" />
         <button id="button1" align="center">search</button>
+        <h3 id="notification">* The first time of searching would take time. Please be patient and wait. It will show you numerous options of current remote job employment. Thank you :)</h3>
       </div>
     </div>
     <div class="second"> only  <span> 3</span>    steps
@@ -26,7 +27,7 @@
     <div class="third">
       <div id = "third_textbox">
          <h2 id="third_text_1">
-           <img src="light_bulb.png" alt="light_bulb" id="light_bulb" style="width:4.2vw;height:4.2vw;"> <br>
+           <img src="https://raw.githubusercontent.com/honeydoyaji/RemoteJobScrapper/main/templates/light_bulb.png" alt="light_bulb" id="light_bulb" style="width:4.2vw;height:4.2vw;"> <br>
           &quot;Work Remotely, <br/>
           Enjoy Your Life More&quot;
           </h2>
